/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * To learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.8/samples
 */


plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
}

apply plugin: 'io.spring.dependency-management'

compileJava{
	options.compilerArgs+=['--enable-preview']
}
bootRun{
	jvmArgs '--enable-preview'
}

test {
    jvmArgs '--enable-preview'
}

group = 'ekrebs'
// version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '22'
 targetCompatibility='22'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}


dependencies {
	implementation 'io.iworkflow:iwf-java-sdk:2.5.+'
	implementation('org.springframework.boot:spring-boot-starter-web')
}